fixed header size and alignment on small screens

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -299,6 +299,11 @@ footer p{
     font-size: 1rem !important; 
   }
 
+  #brand_name{
+    padding: 1rem 2rem;
+
+  }
+
 }
 
 
